--- a/index.html
+++ b/index.html
@@ -4,34 +4,36 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rangga | Flutter Developer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Inter', sans-serif;
       margin: 0;
       padding: 0;
-      background: #f8f9fa;
+      background: linear-gradient(to right, #e3f2fd, #ffffff);
       color: #212529;
     }
     header {
       background-color: #02569B;
       color: white;
-      padding: 2rem;
+      padding: 3rem 2rem;
       text-align: center;
     }
     header h1 {
       margin: 0;
-      font-size: 2rem;
+      font-size: 2.5rem;
     }
     header p {
-      margin: 0.5rem 0 0;
+      margin-top: 1rem;
+      font-size: 1.2rem;
     }
     main {
       padding: 2rem;
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
     }
     section {
-      margin-bottom: 2rem;
+      margin-bottom: 2.5rem;
     }
     a.button {
       display: inline-block;
@@ -40,14 +42,31 @@
       background-color: #ff9800;
       color: white;
       text-decoration: none;
-      border-radius: 5px;
+      border-radius: 8px;
       font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
+    a.button:hover {
+      background-color: #fb8c00;
+    }
+    ul {
+      padding-left: 1.5rem;
     }
     footer {
       text-align: center;
       font-size: 0.9rem;
-      color: #777;
+      color: #555;
       padding: 2rem;
+      border-top: 1px solid #ddd;
+    }
+    .socials {
+      margin-top: 1.5rem;
+    }
+    .socials a {
+      margin-right: 1rem;
+      text-decoration: none;
+      color: #02569B;
+      font-weight: 600;
     }
   </style>
 </head>
@@ -55,12 +74,17 @@
   <header>
     <h1>Rangga – Flutter Developer</h1>
     <p>Membangun aplikasi mobile dengan Flutter & mendukung developer baru memilih hosting terbaik</p>
+    <div class="socials">
+      <a href="https://www.youtube.com/@ranggadev" target="_blank">YouTube</a>
+      <a href="https://www.tiktok.com/@ranggadev" target="_blank">TikTok</a>
+      <a href="https://www.instagram.com/ranggadev" target="_blank">Instagram</a>
+    </div>
   </header>
 
   <main>
     <section>
       <h2>👨‍💻 Tentang Saya</h2>
-      <p>Saya adalah web & mobile developer, dengan fokus utama pada Flutter. Saya sering membantu pemula membangun aplikasi dari nol hingga siap publish.</p>
+      <p>Saya adalah web & mobile developer, dengan fokus utama pada Flutter. Saya sering membantu pemula membangun aplikasi dari nol hingga siap publish. Melalui media sosial dan konten saya, saya berbagi tutorial, review hosting, serta cara membangun aplikasi dari awal.</p>
     </section>
 
     <section>
@@ -75,12 +99,13 @@
         <li>Cara menghubungkan Flutter dengan Laravel API di Hostinger</li>
         <li>Menggunakan Firebase Auth + Hosting dengan Flutter</li>
         <li>Tips deploy backend ke VPS untuk aplikasi Flutter</li>
+        <li>Integrasi Payment Gateway di Flutter + Laravel</li>
       </ul>
     </section>
   </main>
 
   <footer>
-    &copy; 2025 Rangga | Dibuat dengan GitHub Pages
+    &copy; 2025 Rangga | Dibuat dengan GitHub Pages. Ikuti saya di YouTube, TikTok, dan Instagram.
   </footer>
 </body>
 </html>
