--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Rangga | Flutter Developer</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="navbar">
@@ -16,6 +19,7 @@
           <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
             <li><a href="#affiliate">Affiliate</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -44,14 +48,36 @@
       <div class="container">
         <h2>Projects</h2>
         <div class="projects-grid">
-          <!-- Example Project Card -->
           <div class="project-card">
             <img src="images/project1.jpg" alt="Project 1" />
             <h3>Employee Attendance App</h3>
             <p>Built with Flutter + Firebase with selfie & location lock features.</p>
           </div>
-          <!-- Add more project cards here -->
+          <div class="project-card">
+            <img src="images/project2.jpg" alt="Project 2" />
+            <h3>QR ID Scanner</h3>
+            <p>Simple Riverpod + Laravel backend for staff identification.</p>
+          </div>
+          <div class="project-card">
+            <img src="images/project3.jpg" alt="Project 3" />
+            <h3>Product Catalog App</h3>
+            <p>Flutter app with Firebase Firestore for inventory browsing.</p>
+          </div>
         </div>
+      </div>
+    </section>
+
+    <section id="skills" class="section">
+      <div class="container">
+        <h2>Skills & Tools</h2>
+        <ul class="skills-list">
+          <li>Flutter & Dart</li>
+          <li>Firebase (Auth, Firestore, Storage)</li>
+          <li>Laravel API</li>
+          <li>State Management (GetX, Riverpod)</li>
+          <li>UI/UX Design</li>
+          <li>Git & GitHub</li>
+        </ul>
       </div>
     </section>
 
