--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
         <h2>Projects</h2>
         <div class="projects-grid">
           <div class="project-card">
-            <img src="images/project1.jpg" alt="Project 1" />
+            <img src="images/project1.png" alt="Project 1" />
             <h3>Employee Attendance App</h3>
             <p>Built with Flutter + Firebase with selfie & location lock features.</p>
           </div>
           <div class="project-card">
-            <img src="images/project2.jpg" alt="Project 2" />
+            <img src="images/project2.png" alt="Project 2" />
             <h3>QR ID Scanner</h3>
             <p>Simple Riverpod + Laravel backend for staff identification.</p>
           </div>
           <div class="project-card">
-            <img src="images/project3.jpg" alt="Project 3" />
+            <img src="images/project3.png" alt="Project 3" />
             <h3>Product Catalog App</h3>
             <p>Flutter app with Firebase Firestore for inventory browsing.</p>
           </div>
