--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body class="dark-mode">
     <header class="navbar">
       <div class="container">
-        <img src="images/logo.png" alt="Rangga Logo" class="logo" />
+        <img src="images/logo.jpg" alt="Rangga Logo" class="logo" />
         <nav>
           <ul>
             <li><a href="#about">About</a></li>
