--- a/index.html
+++ b/index.html
@@ -51,17 +51,22 @@
           <div class="project-card">
             <img src="images/project1.png" alt="Project 1" />
             <h3>Employee Attendance App</h3>
-            <p>Built with Flutter + Firebase with selfie & location lock features.</p>
+            <p>A mobile app for employee attendance with photo and GPS-based clock in/out. It includes visit check-outs, leave requests (permission, sick, and vacation), and supports shift-based attendance. Users can view detailed history of their attendance. Built with Flutter (frontend) and Laravel (backend) for smooth performance and cross-platform support.</p>
           </div>
           <div class="project-card">
             <img src="images/project2.png" alt="Project 2" />
-            <h3>QR ID Scanner</h3>
-            <p>Simple Riverpod + Laravel backend for staff identification.</p>
+            <h3>King Shamo E-Commerce</h3>
+            <p>A modern e-commerce app focused on shoe sales. Users can browse products, add items to their cart, edit their profiles, and complete secure transactions. The app also features a real-time chat system with admin for inquiries and support. Designed for a smooth and user-friendly shopping experience from browsing to checkout.</p>
           </div>
           <div class="project-card">
             <img src="images/project3.png" alt="Project 3" />
-            <h3>Product Catalog App</h3>
-            <p>Flutter app with Firebase Firestore for inventory browsing.</p>
+            <h3>MJobs - Jobs Vacancy</h3>
+            <p>This app helps job seekers find their next opportunity with ease. The Home screen showcases the 7 latest jobs. In the Jobs menu, users can explore All Jobs, track those In Progress, or view Completed ones. Notifications keep applicants updated on their application status from the admin. The Profile section lets users update their personal info anytime, making job hunting simple and organized.</p>
+          </div>
+          <div class="project-card">
+            <img src="images/project4.png" alt="Project 4" />
+            <h3>KosEasy - Instant Room Booking</h3>
+            <p>KosEasy is a modern web application designed to help users easily find and rent various types of accommodations, including boarding houses (kos-kosan), apartments, villas, and rental homes. The platform connects property owners with potential tenants by offering a user-friendly interface, smart filtering options, and detailed listings with photos, prices, and facilities. Whether you're a student looking for a simple room, a professional searching for a furnished apartment, or a traveler needing a temporary villa, Ngekos provides a convenient and reliable solution.</p>
           </div>
         </div>
       </div>
