--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <p>This app helps job seekers find their next opportunity with ease. The Home screen showcases the 7 latest jobs. In the Jobs menu, users can explore All Jobs, track those In Progress, or view Completed ones. Notifications keep applicants updated on their application status from the admin. The Profile section lets users update their personal info anytime, making job hunting simple and organized.</p>
           </div>
           <div class="project-card">
-            <img src="images/project4.png" alt="Project 4" />
+            <img src="images/project4.jpeg" alt="Project 4" />
             <h3>KosEasy - Instant Room Booking</h3>
             <p>KosEasy is a modern web application designed to help users easily find and rent various types of accommodations, including boarding houses (kos-kosan), apartments, villas, and rental homes. The platform connects property owners with potential tenants by offering a user-friendly interface, smart filtering options, and detailed listings with photos, prices, and facilities. Whether you're a student looking for a simple room, a professional searching for a furnished apartment, or a traveler needing a temporary villa, Ngekos provides a convenient and reliable solution.</p>
           </div>
