--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <li>Flutter & Dart</li>
           <li>Firebase (Auth, Firestore, Storage)</li>
           <li>Laravel API</li>
-          <li>State Management (GetX, Riverpod)</li>
+          <li>State Management (GetX, Riverpod, Provider, BLoC)</li>
           <li>UI/UX Design</li>
           <li>Git & GitHub</li>
         </ul>
@@ -108,7 +108,7 @@
 
     <footer>
       <div class="container">
-        <p>&copy; 2025 Rangga | Made with ❤️ using HTML, CSS, JS</p>
+        <p>&copy; 2025 Rangga</p>
       </div>
     </footer>
   </body>
